[package]
name = "pdd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.25"
strum_macros = "0.25"
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.100"
md-5 = "0.10.5"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", default-features = false, features = ["macros"] }
time = { version = "0.3", features = ["macros"] }
tracing = "0.1"
thiserror = "1"

tokio-tungstenite = { version = "0.19.0", features = [
    "native-tls",
], optional = true }
base64 = { version = "0.21.2", optional = true }
futures-util = { version = "0.3.28", optional = true }
serde_with = { version = "3.1.0", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
tracing-subscriber = "0.3.17"
anyhow = "1"

[[example]]
name = "wsclient"
required-features = ["pmc-native-tls"]

[[example]]
name = "pmc_client"
required-features = ["pmc-native-tls"]

[[bench]]
name = "my_benchmark"
harness = false

[workspace]
members = ["build_req"]

[features]
pmc-native-tls = ["tokio-tungstenite", "base64", "futures-util", "serde_with"]
