[package]
name = "pdd"
version = "0.1.1"
edition = "2021"
description = "拼多多开放平台sdk"
readme = "README.MD"
license = "MIT"
repository = "https://github.com/Cherrs/pdd-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.25"
strum_macros = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
md-5 = "0.10"
reqwest = { version = "0.11", features = ["json", "multipart"] }
tokio = { version = "1", default-features = false, features = [
    "macros",
    "fs",
    "time",
] }
time = { version = "0.3", features = ["macros"] }
tracing = "0.1"
thiserror = "1"
base64 = { version = "0.21" }

tokio-tungstenite = { version = "0.20.0", features = [
    "native-tls",
], optional = true }
futures-util = { version = "0.3", optional = true }
serde_with = { version = "3", optional = true }

[dev-dependencies]
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
anyhow = "1"
tokio = { version = "1", default-features = false, features = [
    "macros",
    "fs",
    "rt-multi-thread",
] }


[[example]]
name = "wsclient"
required-features = ["pmc-native-tls"]

[[example]]
name = "pmc_client"
required-features = ["pmc-native-tls"]

[workspace]
members = ["build_req"]

[features]
pmc-native-tls = ["tokio-tungstenite", "futures-util", "serde_with"]
file = ["tokio/fs"]
